# radioagent

./: .dockerignore  .env  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.brain  Dockerfile.icecast  README.md  brain.py  config.py  config.yaml  config.yaml.example  dashboard.html  docker-compose.yml  install.sh  pyproject.toml  radio.liq  requirements-cpu.txt  requirements.txt  script_generator.py  start.sh
.beads/: metadata.json
.github/: FUNDING.yml
.github/workflows/: deploy-website.yml
config/: icecast.xml  icecast.xml.example  radio.liq
deploy/docker/: Dockerfile.brain  Dockerfile.icecast  config.yaml.example  docker-compose.yml
deploy/k8s/: README.md  configmaps.yaml  ingress.yaml  secrets.yaml
deploy/systemd/: agent-radio-brain.service  agent-radio-liquidsoap.service
docker/: config.yaml  radio.liq
docs/: audio-tools.md  dj-skill-spec.md  operations.md  prd.md  release-plan.md  roadmap.md  spec.md  systemdesign.md  tones-spec.md  tts-evaluation.md
eng2/src/: dashboard.html  (+3 more)
k8s/: configmaps.yaml  icecast.yaml  ingress.yaml  namespace.yaml  radio.yaml
k8s-example/: icecast.yaml  radio.yaml
scripts/: install.sh  start.sh
skills/: dj.skill  setup.skill
src/: brain.py  config.py  dashboard.html  playlist_manager.py  script_generator.py
starter-music/: LICENSE.md
systemd/: agent-radio-brain.service  agent-radio-liquidsoap.service
tests/: test_brain.py  test_config.py  test_playlist_manager.py  test_script_generator.py  test_tts.py
tts/: __init__.py  kokoro_engine.py
website/: dj.skill  index.html  install.sh  llms.txt  sitemap.xml
(+6 files in other folders)
